# evebot-backend

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
evebot/: entrypoint.sh  manage.py
evebot/evebot/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
evebot/models/: models.py
evebot/models/migrations/: 0001_initial.py  0002_universe.py  0003_alter_ancestry_icon_id.py  0004_alter_ancestry_short_description.py
evebot/models/models/: __init__.py
evebot/models/models/status/: status.py
evebot/models/models/universe/: __init__.py  ancestry.py  asteroid_belts.py  bloodlines.py  categories.py  constellations.py  factions.py  graphics.py  groups.py  moons.py  planets.py  races.py  regions.py  stargates.py  stars.py  stations.py  structures.py  systems.py  types.py
evebot/sync/: tasks.py
evebot/sync/alliance/: tasks.py
evebot/sync/runners/: status.py
evebot/sync/runners/universe/: ancestry.py  bloodline.py  category.py  type.py
